# epaper-movie-frame

./: .gitignore  .ruff.toml  LICENSE  README.md  config.example.toml  config.toml  database.py  install.sh  install_as_service.example.sh  install_dependencies.sh  launch.sh  models.py  movie_data.json  movieplayer.py  movies.sqlite  project-install.sh  pyproject.toml  requirements.txt  slowmovie.py  system-setup.sh  uninstall.sh  webui.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
database/: __init__.py  database.py
docs/: TECHNICAL_ARCHITECTURE.md  USER_EXPERIENCE.md
models/: models.py
static/CSS/: style.css
templates/: _movie_playback_status.html  _quiet_status.html  config.html  firstrun.html  index.html  layout.html  movie_details.html  movie_settings.html  movies.html  settings.html  upload.html
utils/: __init__.py  config.py  eframe_inky.py  video_utils.py
